Fix spacing issues on login page

--- a/src/pages/Landing/styles.sass
+++ b/src/pages/Landing/styles.sass
@@ -41,7 +41,7 @@
       height: 70%
       width: 80%
       margin: auto
-      margin-top: 45px
+      margin-top: 40px
       border-radius: 10px
       display: flex
 
